[package]
name = "belladonna-sherbet"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16" }
bevy_skein = { version = "0.2", optional = true}
avian3d = "0.3"

[lints.clippy]
to_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"

[features]
dev = [
    "dep:bevy_skein",
    "bevy_skein/presets",
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
    "bevy/bevy_ui_debug",
    # Improve error messages coming from Bevy
    "bevy/track_location",
]
tracing = [
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
strip = true
opt-level = 3
